docker_k8s/network_policy/myapp-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db #pods which policy applies to
  policyTypes:
    - Ingress 
  ingress:
    - from:
        - podSelector:
            matchLabels:
              key: selectedlabels #only traffic from these pods can reach at db
      ports:
        - protocol: TCP
          port: 3306 #db
  egress:
    - to:
      - ipBlock:
          cidr: 192.168.1.1/32
      ports:
        - protocol: TCP
          port: 8080
